# eda-sigma-interval

./: README.md  eda_resumo.txt  pyproject.toml
scripts/: In_notebook.ipynb  Untitled.ipynb  exemplo_de_uso.py
src/EDA_Igor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/eda_igor/: __init__.py  eda.py
